--- a/index.html
+++ b/index.html
@@ -11,4 +11,7 @@
         <canvas id="canvas">
         </canvas>
     </div>
+    <button id="c">Circle</button>
+    <button id="r">Rectangle</button>
+    <script type="module" src="main.js"></script>
 </body>
