--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
                 <button type="button" id="c" title="Hold LEFT click to resize. Release to create the circle.">Circle</button>
                 <button type="button" id="r" title="Hold LEFT click to resize, RIGHT click or SPACE to orient. Release to create the rectangle.">Rectangle</button>
             </p>
+            <p>
+                <select id="gravity">
+                    <option value="" disabled selected>Gravity strength</option>
+                    <option value=0>Disabled</option>
+                    <option value=1>Week gravity</option>
+                    <option value=2 selected>Medium gravity</option>
+                    <option value=3>Strong gravity</option>
+                </select>
+                <select id="collisions">
+                    <option value="" disabled selected>Collision mode</option>
+                    <option value=0>Disabled</option>
+                    <option value=1 selected>Push Off</option>
+                    <option value=2 selected>Bounce Off</option>
+                </select>
+            </p>
             <canvas id="canvas">
             </canvas>
 
