--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
 </head>
     <body>
         <div id="container">
-            <p>
+            </p>
                 <button type="button" id="c" title="Hold LEFT click to resize. Release to create the circle.">Circle</button>
                 <button type="button" id="r" title="Hold LEFT click to resize, RIGHT click or SPACE to orient. Release to create the rectangle.">Rectangle</button>
+            </p>
+            <р>
+                <select id="gravity">
+                    <option value="" disabled selected>Gravity strength</option>
+                    <option value=0>Disabled</option>
+                    <option value=1>Weak gravity</option>
+                    <option value=2 selected>Medium gravity</option>
+                    <option value=3>Strong gravity</option>
+                </select>
+                <select id="collisions">
+                    <option value="" disabled selected>Collision mode</option>
+                    <option value=0>Disabled</option>
+                    <option value=1 selected>Push Off</option>
+                    <option value=2 selected>Bounce Off</option>
+                </select>
             </p>
             <canvas id="canvas">
             </canvas>
