--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
     <body>
         <div id="container">
-            </p>
+            <p>
                 <button type="button" id="c" title="Hold LEFT click to resize. Release to create the circle.">Circle</button>
                 <button type="button" id="r" title="Hold LEFT click to resize, RIGHT click or SPACE to orient. Release to create the rectangle.">Rectangle</button>
             </p>
-            <р>
+            <p>
                 <select id="gravity">
                     <option value="" disabled selected>Gravity strength</option>
                     <option value=0>Disabled</option>
@@ -29,7 +29,8 @@
             </p>
             <canvas id="canvas">
             </canvas>
-
-            
+        </div>
     </body>
+        
+</html>
 
