--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <option value=0>Disabled</option>
                     <option value=1>Push off</option>
                     <option value=2 selected>Bounce off</option>
+                    <option value=3 >Bounce and Rotate</option>
                 </select>
             </p>
             <canvas id="canvas">
