--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
                     <option value=2 selected>Bounce off</option>
                     <option value=3 >Bounce and Rotate</option>
                 </select>
+                <select id="colour">
+                    <option value="" disabled>Shape Colour</option>
+                    <option value=0>Red</option>
+                    <option value=1>Orange</option>
+                    <option value=2 >Yellow</option>
+                    <option value=3 >Green</option>
+                    <option value=4>Blue</option>
+                    <option value=5 >Purple</option>
+                    <option value=6 >Pink</option>
+                    <option value=7 selected>Black</option>
+                </select>
             </p>
             <canvas id="canvas">
             </canvas>
