--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <option value="" disabled>Collision Mode</option>
                     <option value=0>Disabled</option>
                     <option value=1>Push off</option>
-                    <option value=2 selected>Bounce off</option>
-                    <option value=3 >Bounce and Rotate</option>
+                    <option value=2 >Bounce off</option>
+                    <option value=3 selected>Bounce and Rotate</option>
                 </select>
                 <select id="colour">
                     <option value="" disabled>Shape Colour</option>
